tests/cli/snapshots/cli__render__render_needs_an_output_for_a_file_named_only_by_its_suffix.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - ".spec.yaml"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × could not name the Markdown file for .spec.yaml
  help: pass one with `--output`, e.g. `--output SPEC.md`
