tests/cli/snapshots/cli__render__render_never_writes_over_the_requirements_file.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--output"
    - "./SPEC.slcr.yml"
    - "--force"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × ./SPEC.slcr.yml is the requirements file being rendered
  help: choose another file with `--output`
