tests/cli/snapshots/cli__render__render_rejects_an_unsupported_format.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - SPEC.md
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × SPEC.md is not a YAML, JSON, or TOML file
  help: a requirements file's name must end in `.yaml`, `.yml`, `.json`, or `.toml`
