tests/cli/snapshots/cli__render__render_replaces_its_own_earlier_output.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
---
success: true
exit_code: 0
----- stdout -----
SPEC.md: rendered todo-api

----- stderr -----
