tests/cli/snapshots/cli__render__render_reports_a_missing_file.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × could not read SPEC.slcr.yml
  ╰─▶ No such file or directory (os error 2)
