tests/cli/snapshots/cli__render__render_writes_to_stdout.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "-o"
    - "-"
---
success: true
exit_code: 0
----- stdout -----
<!-- Generated by slcr from the todo-api specification. Do not edit: change the specification and run `slcr render`. -->

<a id="SEC-001"></a>
# TodoList API

A REST web application in MVC layout with one resource.

<a id="SEC-002"></a>
## 1. Views

The API surface.

<a id="REQ-001"></a>
### 1.1 TodoListItem endpoint

There MUST be an endpoint for the TodoListItem resource.

All of the following must hold:

- [POST creates an item](#REQ-002)
- [GET reads an item](#REQ-003)

<a id="REQ-002"></a>
#### 1.1.1 POST creates an item

The endpoint MUST accept POST to create an item.

All of the following must hold:

- [Request is authenticated](#REQ-004)

<a id="REQ-004"></a>
##### 1.1.1.1 Request is authenticated

The request MUST be authenticated.

*Refines:* [GET reads an item](#REQ-003)

<a id="REQ-003"></a>
#### 1.1.2 GET reads an item

The endpoint MUST accept GET to read an item.

All of the following must hold:

- [Request is authenticated](#REQ-004)

<a id="SEC-003"></a>
## 2. Controllers

<a id="REQ-005"></a>
### 2.1 TodoListItem controller

There MUST be a controller for TodoListItem.

All of the following must hold:

- [Validates the request payload](#REQ-006)

*Depends on:* [TodoListItem endpoint](#REQ-001), [Table todo_list_item exists](#REQ-007)

<a id="REQ-006"></a>
#### 2.1.1 Validates the request payload

The controller MUST validate the request payload.

<a id="SEC-004"></a>
## 3. Models

Persistence assumptions.

<a id="REQ-007"></a>
### 3.1 Table todo_list_item exists

There MUST be a table `todo_list_item` with columns `title` (string) and `done` (bool).

*Terms:* [TodoListItem](#TERM-001)

*Acceptance criteria:*

<a id="AC-001"></a>**Table schema is declared**

A table named `todo_list_item` is declared with a string column `title` and a boolean column `done`. A structural match against the schema or migration source is sufficient.

<a id="SEC-005"></a>
## 4. Authentication

<a id="REQ-008"></a>
### 4.1 Accepts authentication tokens

The API MUST accept OAuth tokens or API keys.

At least one of the following must hold:

- [Accepts OAuth tokens](#REQ-009)
- [Accepts API keys](#REQ-010)

<a id="REQ-009"></a>
#### 4.1.1 Accepts OAuth tokens

The API MAY accept OAuth tokens.

<a id="REQ-010"></a>
#### 4.1.2 Accepts API keys

The API MAY accept API keys.

<a id="SEC-006"></a>
## 5. Glossary

<dl>
<dt><a id="TERM-001"></a>TodoListItem</dt>
<dd>

A single item on a to-do list, with a title and a done flag.

</dd>
</dl>

----- stderr -----
