tests/cli/snapshots/cli__render__render_writes_to_the_output.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--output"
    - docs/API.md
---
success: true
exit_code: 0
----- stdout -----
docs/API.md: rendered todo-api

----- stderr -----
